Made README more streamlined, added static page for when MLcomp is down

--- a/README
+++ b/README
@@ -3,73 +3,112 @@ MLcomp is a website for automatic and standarized execution of algorithms on dat
 The actual website is here:
   http://mlcomp.org
 
-NOTE: always source the rc file (run . ./rc in bash) before running any of the following commands.
+This README will give you instructions for running your own local copy of the
+website.
 
-### Installation
-
-# ALWAYS make sure to run the initialization script, it sets the correct environment variables:
+Important: always source the rc file in this directory prior to running any of
+the following commands.  In bash, type:
 
   . ./rc
 
-# You'll need to have:
-# 1) ruby version >= 1.8.7
-# 2) rubygems, rake, and libopenssl-ruby
-# 3) mysql -- the client AND server, with root access to the server
-#
-# On Debian, these can be installed with the following command, but check the Ruby version:
+### Installation
 
-  sudo apt-get install mysql-server rake rubygems mongrel libopenssl-ruby # (for Debian)
+MLcomp requires the following packages:
 
-# You will also need three different gems installed.
-# The last of these depends on a local gem which we provide, but you must
-# install it from the root dir:
+ - ruby (version >= 1.8.7)
+ - rubygems (version >= 1.3.7)
+ - libopenssl-ruby
+ - mongrel (version >= 1.1.5)
+ - mysql-server (version >= 5.1.54)
+
+On Ubuntu, these can be installed with the following command:
+
+  sudo apt-get install ruby rubygems libopenssl-ruby mongrel mysql-server
+
+You will also need to install some Ruby gems:
 
   gem install -v=2.1.1 rails
   gem install json
-  gem install rails_sql_views-0.7.0.gem
   gem install mysql
+  gem install packages/rails_sql_views-0.7.0.gem # We provide this file
 
-# It'll be useful to set up your ssh keys so that you can ssh into localhost 
-# (or wherever the worker is running) without typing a password.
-# (run ssh-keygen on the master and add .ssh/id_rsa.pub to .ssh/authorized_keys on the worker)
-
-# Now we need to setup the database. We'll first initialize the database, and
-# grant permissions. NOTE: here you'll be needing the mysql root password
+Now we need to create the MLcomp database.  Note: you need the mysql root
+password to do this.  If you don't have it, ask your system administrator to
+run the commands in the script for you:
 
   ./init-db
 
-# Now we update the db with the correct schema by running the rails migrations
+Next, we update the database to the correct schema by running the Rails
+migrations:
 
   ./update-db
 
-# Now we'll seed the db with initial content. This should search the 
+Finally, we seed the database with initial programs and datasets:
 
   ./seed-db
 
-### To run MLcomp, start the following processes (in different terminals):
-  ./run-server # Starts the Rails web server (on port 3000 by default)
-  ./run-master [-local] # Starts the run master (communicates with workers to run jobs)
-  cd worker && ./worker -server localhost # Starts up a worker
-  ./run-stats # Starts a process that computes general statistics and updates the database (optional)
+Now you can run MLcomp by typing:
+
+  ./run-web-server # Starts the Rails web server (on port 3000 by default)
+
+You should be able point your browser to http://localhost:3000 and see the
+MLcomp website.
+
+The next step is to start the MLcomp master and workers so that you can
+actually create runs.  To start the master, simply type in a different terminal
+from the web server:
+
+  ./run-master
+
+You can start MLcomp workers on any machines that you can ssh into from the
+master without a password.  To do this, run ssh-keygen on the master and append
+.ssh/id_rsa.pub to .ssh/authorized_keys on the worker.  Copy the worker directory
+into to the worker machine, and run:
+
+  cd worker && ./worker -server <master hostname>
+
+Optional: on the master, you can run a process that periodically updates the
+database with general statistics about the programs/datasets (e.g., ratings):
+
+  ./run-stats
+
+Optional: on the master, you can run a process that enables command-line access
+to MLcomp (via the mlcomp-tool):
+
+  ./run-command-server
+
+And that's it!  And now you should be able to create runs on your local
+website.  The master will dispatch the runs to the workers, and the results
+will be sent back.
 
 ### Relevant directories
-# ./site: where the Rails webserver and code reside
-# ./var: DO NOT TOUCH -- this is where MLcomp stores programs/datasets/runs which
-#		 have been uploaded and correspond to database entries
-# ./domains: specification files for each domain in system along with 
-#		 helper programs and sample datasets to be uploaded.
 
-### When updating the system from the repository:
+ - site: where the Rails webserver and code reside
+ - var: DO NOT MODIFY -- this is where MLcomp stores programs/datasets/runs
+   which have been uploaded and is synchronized with the database.
+ - domains: specification files for each domain in system along with helper
+   programs and sample datasets to be uploaded.
+
+To update MLcomp, type:
+
   git pull
-  cd site && ./update-db # Update database
+  cd site && ./update-db
 
-### Handy database commands
-  mysql -u rails_user mlcomp_development # inspect it
-  mysqldump -u rails_user mlcomp_development > mlcomp_development.backup # dump contents
+Handy database commands:
 
-### On Fedora (which is what the mlcomp.org master currently uses on EC2), we need the following packages:
-  yum install ruby-devel.i386 mysql-devel.i386 gcc g++ PyYAML
+  mysql -u rails_user mlcomp_development # Inspect the database
+  mysqldump -u rails_user mlcomp_development > mlcomp_development.backup # Dump database to a file
+  mysql -u rails_user < mlcomp_development.backup # Overwrite database with file (be careful!)
 
-### On Debian (which is what the workers use):
-  apt-get install g++ mono-runtime ruby r-base-core octave3.2 clisp guile-1.8 ocaml ghc6 python-numpy python-scipy
-  Also install Java 1.7 and Scala 2.9.
+### Worker software:
+
+MLcomp programs uploaded by the user will require various software packages to
+run.  MLcomp workers need to have these packages installed:
+
+  http://mlcomp.org/help/worker_info.html
+
+These can be installed on Ubuntu by running:
+
+  sudo apt-get install g++ mono-runtime ruby r-base-core octave3.2 clisp guile-1.8 ocaml ghc6 python-numpy python-scipy
+
+Also install Sun Java 1.7 and Scala 2.9 manually.
